很多很多东西，到第八章了

--- a/app/src/main/res/layout/activity_book_manager.xml
+++ b/app/src/main/res/layout/activity_book_manager.xml
@@ -12,4 +12,10 @@
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" />
 
+    <com.cetnaline.myapplication.CircleView
+        android:padding="20dp"
+        app:circle_color="@color/colorAccent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
